# alien-maintenance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildLinux.sh  buildWin.bat  main.cpp  oldCMakeLists.txt
builds/: assetchecker.ipynb
old/: CMakeLists.txt
source/: alienmaintenance.cpp  gui.hpp  main.cpp  mapeditor.cpp  render.hpp  textureorder.hpp  world.hpp
